fix: text-width on mobile

--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -41,6 +41,7 @@
     & {
       &__text {
         text-align: center;
+        max-width: 100%;
       }
 
       &__img-container {
